--- a/game/index.html
+++ b/game/index.html
@@ -2,57 +2,175 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Battle Slims - Auth</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Idle Strategy Online</title>
-  <style>
-    body { font-family: sans-serif; display: flex; flex-direction: column; align-items: center; padding: 20px; }
-    input, button { margin: 5px; padding: 8px; }
-    .panel { border: 1px solid #ccc; padding: 16px; border-radius: 8px; margin: 10px; width: 250px; }
-  </style>
-</head>
-<body>
-  <h1>Idle Strategy Online</h1>
-  <div id="auth-status">Not logged in.</div>
 
-  <!-- AUTH PANELS -->
-  <div class="panel">
-    <h2>Register</h2>
-    <input id="reg-username" placeholder="Username"><br>
-    <input id="reg-email" placeholder="Email"><br>
-    <input id="reg-password" type="password" placeholder="Password"><br>
-    <button id="register-btn">Register</button>
-  </div>
-
-  <div class="panel">
-    <h2>Login</h2>
-    <input id="login-email" placeholder="Email"><br>
-    <input id="login-password" type="password" placeholder="Password"><br>
-    <button id="login-btn">Login</button>
-  </div>
-
-  <div class="panel">
-    <h2>Guest</h2>
-    <button id="guest-btn">Play as Guest</button>
-  </div>
-
-  <!-- PROFILE PANEL -->
-  <div id="profile-panel" class="panel" style="display:none;">
-    <h2>Profile</h2>
-    <p><strong>Name:</strong> <span id="profile-username"></span></p>
-    <p><strong>Level:</strong> <span id="profile-level"></span></p>
-    <p><strong>Gold:</strong> <span id="profile-gold"></span></p>
-    <button id="logout-btn">Logout</button>
-
-    <div id="upgrade-panel" style="display:none; margin-top:15px;">
-      <h3>Upgrade to Full Account</h3>
-      <input id="upgrade-username" placeholder="New Username"><br>
-      <input id="upgrade-email" placeholder="Email"><br>
-      <input id="upgrade-password" type="password" placeholder="Password"><br>
-      <button id="upgrade-btn">Upgrade</button>
-    </div>
-  </div>
-
+  <script type="module" src="./scripts/firebase-init.js"></script>
+  <script type="module" src="./scripts/auth.js"></script>
   <script type="module" src="./scripts/ui-auth.js"></script>
   <script type="module" src="./scripts/ui-profile.js"></script>
+
+  <style>
+    :root {
+      --bg-color: #121212;
+      --panel-color: #1e1e1e;
+      --accent: #00bcd4;
+      --text: #f1f1f1;
+      --text-muted: #b5b5b5;
+      --radius: 10px;
+    }
+
+    body {
+      background: var(--bg-color);
+      color: var(--text);
+      font-family: "Segoe UI", sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .auth-container {
+      background: var(--panel-color);
+      padding: 2rem;
+      border-radius: var(--radius);
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    }
+
+    .tabs {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 1rem;
+    }
+
+    .tab {
+      flex: 1;
+      text-align: center;
+      padding: 0.5rem;
+      cursor: pointer;
+      color: var(--text-muted);
+      border-bottom: 2px solid transparent;
+    }
+
+    .tab.active {
+      color: var(--accent);
+      border-bottom: 2px solid var(--accent);
+    }
+
+    form {
+      display: none;
+      flex-direction: column;
+    }
+
+    form.active {
+      display: flex;
+    }
+
+    input {
+      margin: 0.3rem 0;
+      padding: 0.6rem;
+      border: none;
+      border-radius: var(--radius);
+      background: #2b2b2b;
+      color: var(--text);
+    }
+
+    button {
+      margin-top: 1rem;
+      padding: 0.6rem;
+      background: var(--accent);
+      color: black;
+      font-weight: bold;
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+    }
+
+    button:hover {
+      filter: brightness(1.1);
+    }
+
+    #guest-btn {
+      margin-top: 1rem;
+      background: #3c3c3c;
+      color: var(--text);
+    }
+
+    #profile {
+      display: none;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 0.5rem;
+    }
+
+    .collapsible {
+      background: #2a2a2a;
+      border-radius: var(--radius);
+      overflow: hidden;
+    }
+
+    .collapsible-header {
+      padding: 0.6rem;
+      cursor: pointer;
+      background: #333;
+      font-weight: bold;
+      color: var(--accent);
+    }
+
+    .collapsible-content {
+      display: none;
+      padding: 0.6rem;
+      background: #252525;
+    }
+
+    .collapsible.active .collapsible-content {
+      display: block;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="auth-container">
+    <div id="auth-ui">
+      <div class="tabs">
+        <div class="tab active" id="login-tab">Login</div>
+        <div class="tab" id="register-tab">Register</div>
+      </div>
+
+      <form id="login-form" class="active">
+        <input type="email" id="login-email" placeholder="Email" required>
+        <input type="password" id="login-password" placeholder="Password" required>
+        <button id="login-btn">Login</button>
+      </form>
+
+      <form id="register-form">
+        <input type="text" id="reg-username" placeholder="Username" required>
+        <input type="email" id="reg-email" placeholder="Email" required>
+        <input type="password" id="reg-password" placeholder="Password" required>
+        <button id="register-btn">Register</button>
+      </form>
+
+      <button id="guest-btn">Play as Guest</button>
+    </div>
+
+    <div id="profile">
+      <h2 id="profile-name"></h2>
+      <p id="auth-status"></p>
+      <button id="logout-btn">Logout</button>
+
+      <div class="collapsible" id="upgrade-section">
+        <div class="collapsible-header">Upgrade to Full Account</div>
+        <div class="collapsible-content">
+          <input type="text" id="upgrade-username" placeholder="Username">
+          <input type="email" id="upgrade-email" placeholder="Email">
+          <input type="password" id="upgrade-password" placeholder="Password">
+          <button id="upgrade-btn">Upgrade</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
