--- a/game/index.html
+++ b/game/index.html
@@ -168,11 +168,30 @@
 
   <div class="main-content">
     <!-- GAME TAB CONTENT -->
-    <div id="game-tab" class="tab-content active">
-      <h2>Game Area</h2>
-      <p>Welcome to Battle Slims! This will later hold gameplay or idle systems.</p>
-      <p style="opacity:0.7;">(Placeholder — we’ll fill this in later.)</p>
+<div id="game-tab" class="tab-content active">
+  <div class="sub-tabs">
+    <div class="sub-tab active" id="subtab-jobs">JOBS</div>
+    <div class="sub-tab" id="subtab-staff">STAFF</div>
+    <div class="sub-tab" id="subtab-equipment">EQUIPMENT</div>
+  </div>
+
+  <div class="sub-content">
+    <div id="jobs-content" class="sub-tab-content active">
+      <h3>Jobs</h3>
+      <p>Job management system coming soon...</p>
     </div>
+
+    <div id="staff-content" class="sub-tab-content">
+      <h3>Staff</h3>
+      <p>Staff hiring and management coming soon...</p>
+    </div>
+
+    <div id="equipment-content" class="sub-tab-content">
+      <h3>Equipment</h3>
+      <p>Equipment shop and inventory coming soon...</p>
+    </div>
+  </div>
+</div>
 
     <!-- ACCOUNT TAB CONTENT -->
     <div id="account-tab" class="tab-content">
