--- a/game/index.html
+++ b/game/index.html
@@ -13,6 +13,7 @@
   <script type="module" src="./scripts/ui-profile.js"></script>
   <script type="module" src="./scripts/ui-main.js"></script>
   <script type="module" src="./scripts/staff-system.js"></script>
+  <script type="module" src="./scripts/jobs-system.js"></script>
 
   <style>
     :root {
@@ -177,10 +178,9 @@
   </div>
 
   <div class="sub-content">
-    <div id="jobs-content" class="sub-tab-content active">
-      <h3>Jobs</h3>
-      <p>Job management system coming soon...</p>
-    </div>
+   <div id="jobs-content" class="sub-tab-content active">
+  <!-- Jobs UI will be generated here -->
+</div>
 
     <div id="staff-content" class="sub-tab-content">
   <h3>On the Books</h3>
