--- a/game/index.html
+++ b/game/index.html
@@ -166,9 +166,8 @@
 <div id="main-frame" style="display:none;">
   <!-- Title Image -->
   <div style="text-align: center; margin-bottom: 1rem; position: relative;">
-    <img id="game-title" src="assets/title.png" alt="" style="max-width: 100%; height: auto; display: none;" onerror="this.style.display='none';">
-    <!-- Fallback to text if image not found -->
-    <h1 id="game-title-text" style="margin: 0; color: var(--accent);">Moving Manager</h1>
+    <img id="game-title" src="assets/title.png" alt="Moving Manager" style="max-width: 100%; height: auto; display: none;" onerror="this.style.display='none';">
+
   </div>
 
   <!-- Left Side Icons -->
