--- a/game/index.html
+++ b/game/index.html
@@ -170,6 +170,26 @@
     <img id="game-title" src="title.png" alt="Moving Manager" width="344px" height="80px">
   </div>
 
+  <!-- Persistent Stats Frame -->
+  <div style="background: #2a2a2a; padding: 0.8rem; border-radius: var(--radius); margin-bottom: 1rem;">
+    <div style="display: flex; justify-content: space-around; align-items: center;">
+      <div style="text-align: center;">
+        <div style="font-size: 0.75rem; color: var(--text-muted); margin-bottom: 0.2rem;">GOLD</div>
+        <div style="font-size: 1.1rem; font-weight: bold; color: #ffd700;">💰 <span id="player-gold">0</span></div>
+      </div>
+      <div style="width: 1px; height: 35px; background: #3a3a3a;"></div>
+      <div style="text-align: center;">
+        <div style="font-size: 0.75rem; color: var(--text-muted); margin-bottom: 0.2rem;">LEVEL</div>
+        <div style="font-size: 1.1rem; font-weight: bold; color: var(--accent);">⭐ <span id="player-level">1</span></div>
+      </div>
+      <div style="width: 1px; height: 35px; background: #3a3a3a;"></div>
+      <div style="text-align: center;">
+        <div style="font-size: 0.75rem; color: var(--text-muted); margin-bottom: 0.2rem;">EXP</div>
+        <div style="font-size: 1.1rem; font-weight: bold; color: #4a9eff;">📊 <span id="player-exp">0</span></div>
+      </div>
+    </div>
+  </div>
+
   <!-- Left Side Icons -->
   <div style="position: absolute; left: 1rem; top: 1rem; display: flex; flex-direction: column; gap: 0.8rem;">
     <!-- Chat Icon -->
